--- a/practice-for-ch-js-browser-ttt-main/index.html
+++ b/practice-for-ch-js-browser-ttt-main/index.html
@@ -5,10 +5,23 @@
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" type="text/css" href="./ttt.css">
     <script src="./dist/main.js"></script>
+    <style>
+      body {
+        margin: 0;
+        min-height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      h1 {
+        margin-left: 2px;
+      }
+    </style>
   </head>
 
   <body>
-    <h1>Tic Tac Toe</h1>
+    <h1 style="font-family: Druk Wide; text-align: center;">[Tic Tac Toe]</h1>
 
     <figure class="ttt"></figure>
   </body>
